# ART.T458_Final_Report_Assigned_by_Shimosaka

./: README.md  pyproject.toml  requirements.txt
notebooks/: question1.ipynb  question3.ipynb  question7.ipynb
src/: dataset.py
