[tool.poetry]
name = "ART.T458_Final_Report_Assigned_by_Shimosaka"
version = "0.1.0"
description = ""
authors = ["astellon <22632787+astellon@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
matplotlib = "^3.3.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
